Restart oplog query if oplog entries are not monotonically increasing

XMLWordPrintableJSON

    • Fully Compatible
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If the upstream server incorrectly returns documents from an oplog tailing query which are not in the correct order, monotonically increase by the "ts" field (time basically), then the client (replica) should treat that as a query error and issue a new query.

      Getting idempotent oplog entries out of order is incorrect behavior from the sync source (upstream server).

            Assignee:
            Scott Hernandez (Inactive)
            Reporter:
            Scott Hernandez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: