SERVER-21930 - Restart oplog query if oplog entries are out of order

(cherry picked from commit 06ff25a41c6ac560c5b9d2fc6a32c13b1346c48d)
(cherry picked from commit ac919e016150819dde59f21c2e6327e5f24754bd)